«Python для анализа данных». ДЗ№1 (по теме «Продвинутый pandas-2»)

--- a/pyda-15-hw-13-pandas-advanced-2.ipynb
+++ b/pyda-15-hw-13-pandas-advanced-2.ipynb
@@ -919,6 +919,52 @@
     "           join(air.set_index('client_id')))\n",
     "summary"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задание 3\n",
+    "\n",
+    "В задаче сквозной аналитики вам предоставили данные по местоположению пользователей. Т. е. для каждого user_id известна последовательность координат (широта/долгота), когда они требовались приложению для полноценной работы. Как бы вы добавили эти сведения в таблицу визитов и покупок? Для составления ответа можно использовать вопросы:\n",
+    "\n",
+    "1. У каждого пользователя известен набор координат. А для связывания с визитом или фактом покупки скорее всего потребуется одно-два числа. Как их получить?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    В целях экономии места для хранения данных данные по местоположению пользователей следует хранить в отдельной таблице-словаре из двух столбцов: в одном - user_id, в другом - например, список из кортежей (каждый кортеж из двух координат). Для получения информации, касающейся связи местоположения с визитами и покупками, следует \"джойнить\" соответствующие таблицы."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Наборы координат одного и того же пользователя могут быть значительно удалены друг от друга. Как это отразится на вопросе расчетах пункта 1?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Не совсем понятно, что имеется ввиду под тем, что \"наборы координат могут быть удалены друг от друга\". Если имеется ввиду удаление в буквальном смысле - то есть то, что расстояние между точками, в которых был пользователь, значительное, то врядли это повлияет на скорость объединения таблиц."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Какие дополнительные признаки можно получить из координат? Ведь это просто числа, которые сами по себе мало что дают."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Для продуманного ответа не хватает информации о продукте и методах его продаж. Если, например, речь идёт о розничной торговле бытовых товаров, то зная историю местоположений каждого пользователя, можно отправлять ему смс с информациях об акциях в магазинах, рядом с которыми он бывает чаще всего."
+   ]
   }
  ],
  "metadata": {
